--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -41,7 +41,7 @@
                         <!-- polis_date -->
                         <div class="grey_area polis_date">
                             <div class="label">Полис начнет действовать:</div>
-                            <div class="date"><input type="text" value="{% if app.session.get('activeFrom') %}{% else %}{{ '+2 days'|date('d.m.Y') }}{% endif %}" name="activeFrom" id="activeFrom"/><span></span></div>
+                            <div class="date"><input type="text" value="{% if app.session.get('activeFrom') %}{% else %}{{ '+2 days'|date('d/m/Y') }}{% endif %}" name="activeFrom" id="activeFrom"/><span></span></div>
 							<div class="pop_up_date">
                                     <b>Не ранее чем с послезавтра.</b> Если Вам нужен полис уже на "сегодня-завтра", пожалуйста свяжитесь с нами для согласования.
                                 </div>
@@ -62,8 +62,6 @@
                                 <div class="param">VIN-код:</div>
                                 <div class="control_point size3">
                                     <input type="text" name="vinCode" id="vinCode" placeholder="Пример: ZFA22300005556777" value="{{ app.session.get('vinCode')}}"/>
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Неправильный формат VIN-кода. Должно быть 17 символов.</div>
                                 </div>
                             </div>
@@ -71,8 +69,6 @@
                                 <div class="param">Номерной знак:</div>
                                 <div class="control_point size3">
                                     <input type="text" name="carNumber" id="carNumber" placeholder="Пример: АА6801КЕ" value="{{ app.session.get('carNumber')}}"/>
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Неправильный формат номерного знака. Должно быть минимум 7 символов без пробелов.</div>
                                 </div>
                             </div>
@@ -110,20 +106,14 @@
                                 <div class="param">ФИО:</div>
                                 <div class="control_point size2">
                                     <input type="text" name="surname" id="surname" placeholder="Фамилия" value="{{ app.session.get('surname')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
                                 <div class="control_point size2">
                                     <input type="text" name="firstname" id="firstname" placeholder="Имя" value="{{ app.session.get('firstname')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
                                 <div class="control_point size2">
                                     <input type="text" name="middlename" id="middlename" placeholder="Отчество" value="{{ app.session.get('middlename')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
                                 <div style="clear: both;"></div>
@@ -131,7 +121,7 @@
                             <!-- -->
 							<div class="line">
                                 <div class="param">Дата рождения:</div>
-                                <div class="control_point date"><input type="text" value="" name="birthDate" id="birthDate"/><span></span>
+                                <div class="control_point date"><input type="text" value="{{ app.session.get('birthDate')}}" name="birthDate" id="birthDate"/><span></span>
 								<div class="error_text_box">Введите дату рождения</div>
 								</div>
                                 
@@ -148,34 +138,24 @@
                                     <label for="documentTypeDriver">Водительское удостоверение</label>
                                 </div>
                                 <div style="clear: both;"></div>
-                                <div class="control_point size1">
+                                <div class="control_point size0">
                                     <input type="text" name="documentSerie" id="documentSerie" placeholder="Серия" value="{{ app.session.get('documentSerie')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
                                 <div class="control_point size1">
                                     <input type="text" name="documentNumber" id="documentNumber" placeholder="Номер" value="{{ app.session.get('documentNumber')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
-                                <div class="control_point size4">
+                                <div class="control_point size6">
                                     <input type="text" name="documentAuthority" id="documentAuthority" placeholder="Кем выдан" value="{{ app.session.get('documentAuthority')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
-                                <div class="control_point size1">
+                                <div class="control_point size7">
                                     <input type="text" name="documentDate" id="documentDate" placeholder="Когда" value="{{ app.session.get('documentDate')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
 								<div class="control_point size5">
-                                    <input type="text" name="documentInn" id="documentInn" placeholder="Идентификационный номер" value="{{ app.session.get('documentInn')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
+                                    <input type="text" name="documentInn" id="documentInn" placeholder="Идентификационный код" value="{{ app.session.get('documentInn')}}" />
                                     <div class="error_text_box">В номере должно быть 10 символов</div>
                                 </div>
                                 <div style="clear: both;"></div>
@@ -183,10 +163,8 @@
                             <!-- -->
                             <div class="line">
                                 <div class="param">Телефон:</div>
-                                <div class="control_point size3">
+                                <div class="control_point size7">
                                     <input type="text" placeholder="(ХХХ)ХХХ-ХХ-ХХ" name="phone" id="phone" value="{{ app.session.get('phone')}}" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
                                 <div style="clear: both;"></div>
@@ -234,14 +212,10 @@
                                 <div style="clear: both;"></div>
                                 <div class="control_point size4">
                                     <input type="text" name="registerAddress" id="registerAddress" placeholder="Улица" value="{{ app.session.get('registerAddress')}}"/>
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
                                 <div class="control_point size2">
                                     <input type="text" name="registerBuilding" id="registerBuilding" value="{{ app.session.get('registerBuilding')}}" placeholder="Дом, корпус, квартира" />
-                                    <div class="success ico"></div>
-                                    <div class="error ico"></div>
                                     <div class="error_text_box">Заполните поле</div>
                                 </div>
 								<div class="kiev_info">На данный момент доставка осуществляется только по Киеву.</div>
@@ -410,18 +384,17 @@
     $('.new_insurer').on('click', clearData);
     $.datepicker.setDefaults($.datepicker.regional[ "ru" ]);
     $('#activeFrom').datepicker({
-    closeText: 'Закрыть',
-    dateFormat: 'dd.mm.yy',
-    inline: true,
     minDate: +2
     });
 	$('#birthDate').datepicker({
-    closeText: 'Закрыть',
-    dateFormat: 'dd.mm.yy',
-	yearRange: "1930:c-17",
+	yearRange: "1945:c-17",
 	changeMonth: true,
     changeYear: true,
-    inline: true,
+    });
+	$('#documentDate').datepicker({
+	yearRange: "1960:c-1",
+	changeMonth: true,
+    changeYear: true,
     });
     function selectCity() {
         var inputEl = $(this).parents('ul').attr('form-input-id');
@@ -543,11 +516,6 @@
     <button type="submit">Отправить!</button>
 </form>
 <script type="text/javascript">
-    $.datepicker.setDefaults($.datepicker.regional[ "ru" ]);
-    $('#activeFrom').datepicker({
-    closeText: 'Закрыть',
-    dateFormat: 'dd.mm.yy'
-    });
     $('#region').on('change', function (e){
             if ($(this).val()>0) $.get('{{path('get_cities')}}', {region_id: $(this).val()}).done(function (data) {
                 var opts = '<option value="0">Выберите город</option>';
