--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -76,15 +76,9 @@ header .main_menu li a {
 		
 header .main_menu li a span.arrow {
           width: 12px;
-          height: 12px;
-          background-image: url(../images/menuarrow.png);
-		  background-position: 0px 0px;
-          background-repeat: no-repeat;
-          background-color: transparent;
-          display: inline-block;
-          margin-left: 6px;
-          position: relative;
-          top: 1px; }
+          height: 9px;
+		  background-position: -230px -135px;
+          top: 0px; }
 
 header .main_menu li span.home {
         width: 18px;
@@ -117,10 +111,8 @@ header .main_menu li:hover a {
         color: #fff; }
 		  
 header .main_menu li:hover a span.arrow {
-          background-image: url(../images/menuarrow-w.png);
-          background-position: 0px 0px; 
-		  background-repeat: no-repeat;
-          background-color: transparent;}
+          background-position: -242px -135px; 
+		  }
 
 header .inner_menu {
     bottom: -28px;
@@ -484,6 +476,13 @@ top:50%;
 margin-top: -10px;
  }
 
+ 
+/*------------------------------------------------------------------------------------------- */
+/*----------------------------------- GREY AREA GENERAL ------------------------------------- */
+/*------------------------------------------------------------------------------------------- */
+.grey_area.auto_info {
+	padding: 20px 20px 0 20px;
+} 
 /*------------------------------------------------------------------------------------------- */
 /*---------------------------------------- POLIS DATE --------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
@@ -516,10 +515,10 @@ margin-top: -10px;
 .pop_up_date {
   position: absolute;
   z-index: 3;
-  left: 550px;
-  top: 180px;
+  left: 510px;
+  top: 189px;
   width: 405px;
-  height: 68px;
+  height: 50px;
   border-radius: 6px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -541,20 +540,20 @@ margin-top: -10px;
     position: absolute;
     top: 50%;
     left: -10px;
-	margin-top: -20px;
-    border-top: 20px solid rgba(0, 0, 0, 0);
+	margin-top: -15px;
+    border-top: 15px solid rgba(0, 0, 0, 0);
     border-right: 10px solid #cccccc;
-    border-bottom: 20px solid rgba(0, 0, 0, 0); }
+    border-bottom: 15px solid rgba(0, 0, 0, 0); }
 
   .pop_up_date:after {
     content: "";
     position: absolute;
     top: 50%;
     left: -9px;
-	margin-top: -20px;
-    border-top: 20px solid rgba(0, 0, 0, 0);
+	margin-top: -15px;
+    border-top: 15px solid rgba(0, 0, 0, 0);
     border-right: 10px solid #f4fae6;
-    border-bottom: 20px solid rgba(0, 0, 0, 0); }
+    border-bottom: 15px solid rgba(0, 0, 0, 0); }
 	
 .ui-datepicker {
 	width: 202px;
@@ -565,14 +564,16 @@ margin-top: -10px;
 form.personal_data .line {
     margin-bottom: 40px;
     }
-	
+form.personal_data .param {
+	line-height: 38px;
+}
 
 form.personal_data .param_adres {
     font-size: 18px;
     color: black;
     font-weight: 400;    
     margin-top: 0px;
-    line-height: 21px;
+    line-height: 23px;
     width: 150px;
     position: absolute;
     top: 0;
@@ -581,16 +582,14 @@ form.personal_data .param_adres {
 form.personal_data .kiev_info {
     font-size: 14px;
     margin-left:23px;
-	line-height: 40px;
+	margin-top:10px;
 	color: #505050;
 	font-family: Arial, Helvetica, sans-serif;
 	font-style: italic;
 	}
     	
 	
-form.personal_data .control_point {
-	margin-top: 3px;
-}
+
 
 form.personal_data .control_point input:focus {
       -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.41);
@@ -599,16 +598,20 @@ form.personal_data .control_point input:focus {
 
 form.personal_data .control_point.size0 {
       width: 68px; }  
+
+form.personal_data .control_point.size4 {
+	margin-top:5px;
+}
 	  
 form.personal_data .control_point.size5 {
-      width: 202px;
-	  margin-top: 10px;}	
+      width: 203px;
+	  margin-top: 13px;}	
 
 form.personal_data .control_point.size6 {
       width: 366px; }		  
 
 form.personal_data .control_point.size7 {
-      width: 202px; }		  
+      width: 203px; }		  
  
  form.modal_form .control_point.error input {
     border-color: #e73636;
