--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -387,12 +387,12 @@
     minDate: +2
     });
 	$('#birthDate').datepicker({
-	yearRange: "1945:c-17",
+	yearRange: "1945:-17",
 	changeMonth: true,
     changeYear: true,
     });
 	$('#documentDate').datepicker({
-	yearRange: "1960:c-1",
+	yearRange: "1960:-1",
 	changeMonth: true,
     changeYear: true,
     });
