--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/payedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/payedOrderNotification.html.twig
@@ -12,15 +12,21 @@
 
 <p><b>Детальная информация по заказу:</b></p>
 <p>Полис Автогражданки (ОСАГО) - {{order.price}} грн</p>
-<p>Разширение ответственности (ДГО) - {{order.priceDgo}} грн</p>
-<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs}} грн</p>
+{% if order.priceDgo %}<p>Разширение ответственности (ДГО) - {{order.priceDgo}} грн</p>{% endif %}
+{% if order.priceNs %}<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs}} грн</p>{% endif %}
 
 <p><b>Общая сумма Вашего заказа:</b> {{order.price + order.priceDgo + order.priceNs}} грн</p>
 
 <p>Наш партнер, обеспечивающий страховые обязательства: ЧАО «СК «БРОКБИЗНЕС».</p>
 <p>
 ------------------------------------------------------
-<b>Выбранный Вами способ оплаты:</b> Пластиковая карта VISA, MASTERCARD
+<b>Выбранный Вами способ оплаты:</b> {%- if order.payType = 'cash' -%}Наличными курьеру
+{%- elseif order.payType = 'plastic' -%}Пластиковая карта
+{%- elseif order.payType = 'privat_card' -%}Карта Приват Банка
+{%- elseif order.payType = 'privat24' -%} Приват24
+{%- elseif order.payType = 'terminal' -%}Терминал самообслуживания
+{%- elseif order.payType = 'webmoney' -%}Вебмани
+{%- endif -%}
 ------------------------------------------------------
 </p>
 <p>Наш менеджер свяжется с Вами в ближайшее время для уточнения деталей доставки.</p>
