--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -936,7 +936,7 @@ $(function() {
             if (data.message == 'success') {
                 //Show success window
                 $('#success_modal .inform_title').text('Ваш расчет сохранен!');
-                $('#success_modal .information_box').append('При следующем посещении сайта, на странице калькулятора Вы увидите свой сохраненный расчет для полиса ОСАГО');
+                $('#success_modal .information_box').text('При следующем посещении сайта, на странице калькулятора Вы увидите свой сохраненный расчет для полиса ОСАГО');
                 $('#success_modal').modal().open();
             }
         });
