--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
@@ -1,20 +1,20 @@
 <p>Поступил заказ от клиента.</p>
 <p></p>
 <p><b>Серия и номер полиса:</b> {{order.policy.serie}}/{{order.policy.value}}</p>
-<p><b>Начало действия полиса:</b> {{order.activeFrom}}</p>
+<p><b>Начало действия полиса:</b> {{order.activeFrom|date('d.m.Y')}}</p>
 <p><b>Срок страхования:</b> {{order.insuranceTerm}}</p>
 <p><b>ФИО:</b> {{order.surname}} {{order.firstname}} {{order.middlename}}</p>
 <p><b>Адрес проживания:</b> {{order.city}}, {{order.registerAddress}}, {{order.registerBuilding}}</p>
 <p><b>Адрес доставки:</b> {{order.deliveryAddress}}, {{order.deliveryBuilding}}</p>
-<p><b>Документ:</b> {% if order.documentType == 'D'%}вод. права{% elseif order.documentType == 'P'%}паспорт{%endif%} - {{order.documentSerie}}/{{order.documentNumber}}, {{order.documentAuthority}}, {{order.documentDate}}</p>
+<p><b>Документ:</b> {% if order.documentType == 'D'%}вод. права{% elseif order.documentType == 'P'%}паспорт{%endif%} - {{order.documentSerie}}/{{order.documentNumber}}, {{order.documentAuthority}}, {{order.documentDate|date('d.m.Y')}}</p>
 <p><b>ИНН:</b> {{order.documentInn}}</p>
 <p><b>Телефон:</b> {{order.phone}}</p>
 <p>-------</p>
-<p><b>Авто:</b> {{order.carBrand}} {{order.carModel}} {{order.carAge}}, {% if order.displacement == '1.4' %}до 1.6 л.,
+<p><b>Авто:</b> {{order.carModel.brand.value}} {{order.carModel}} {{order.carAge}}, {% if order.displacement == '1.4' %}до 1.6 л.,
                                 {%- elseif order.displacement == '1.7' -%}1.601 - 2.0 л.,
                                 {%- elseif order.displacement == '2.1' -%}2.01 - 3.0 л.,
                                 {%- elseif order.displacement == '3.1' -%}больше 3.0 л.{% endif %}</p>
-<p><b>Место регистрации ТС:</b> {{order.registerRegion}}, {{order.registerCity}}</p>
+<p><b>Место регистрации ТС:</b> {{order.registerCity.region.value}}, {{order.registerCity}}</p>
 <p><b>VIN-код:</b> {{order.vinCode}}</p>
 <p><b>Номерной знак:</b> {{order.carNumber}}</p>
 <p>-------</p>
