мин. семантика на морде

--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -121,18 +121,18 @@
     <footer>
     	<div class="limit">
             <div class="column first">
-                <div class="title">Сервис</div>
-                <a href="{{path('about')}}"><span></span>О нас</a>
+                <div class="title">О нас</div>
+                <a href="{{path('about')}}"><span></span>Наш сервис</a>
                 <a href="{{path('contacts')}}"><span></span>Контакты</a>
                 <a href="#" class="call_link"><span></span>Обратный звонок</a>
 				<a href="#" class="question_link"><span></span>Задать вопрос</a>
             </div>
             <div class="column second">
                 <div class="title">Меню</div>
-                <a href=""><span></span>Главная</a>
-                <a href=""><span></span>Расчет полиса ОСАГО</a>
-                <a href=""><span></span>Автозаполнение полиса</a>
-                <a href=""><span></span>Все о страховании ОСАГО</a>
+                <a href="{{path('step1')}}"><span></span>Калькулятор ОСАГО</a>
+                <a href=""><span></span>Как оформить полис?</a>
+                <a href="{{path('osago-info')}}"><span></span>Все об ОСАГО</a>
+				<a href="{{path('event-info')}}"><span></span>Страховой случай</a>
             </div>
             <div class="column third">
                 <div class="title">Мы на связи</div>
