--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -241,6 +241,10 @@ footer .bottom_part .counter_container {
 /*------------------------------------------------------------------------------------------- */
 /*--------------------------------------- ECONOM BOX ---------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
+.how_it_work .step_point .text {
+	font-style:normal;
+}
+
 .advantages .adv_point {
     padding-left: 85px;
 	margin: 0 15px 50px 0;}
@@ -250,6 +254,27 @@ footer .bottom_part .counter_container {
 	width: 285px;
 	}
 
+.advantages .adv_point p.text { 
+	  line-height: 14px;
+}	
+
+.partner .text_box p.short_text, .partner .text_box p.drop_text {
+	font-size: 16px;
+    text-align: justify; 
+	margin-bottom:10px;
+	font-family:'robotoregular', Arial, Helvetica, sans-serif;
+	}
+
+.min_cost .limit h2 {
+	font-size: 23px;
+    line-height: 27px;
+    text-shadow: 0 0 1px white;
+	font-weight: 400;
+	font-style: normal;
+	margin:0;
+	font-family:'robotoregular', Arial, Helvetica, sans-serif;
+}
+	
 .question .question_point.phone {
     width: 300px;
     margin: 0 0px 10px 0;}
