User notifications fixed. New insurer cleanup improved

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -370,6 +370,8 @@
         $('#registerAddress').val(null);
         $('#registerBuilding').val(null);
         $('.person li').removeClass('active');
+        $('.control_point').removeClass('error');
+        $('.control_point').removeClass('success');
     }
 
     $('#identity-form').on('submit', checkForm);
