--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/unpayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/unpayedOrderNotification.html.twig
@@ -12,8 +12,8 @@
 
 <p><b>Детальная информация по заказу:</b></p>
 <p>Полис Автогражданки (ОСАГО) - {{order.price}} грн</p>
-<p>Разширение ответственности (ДГО) - {{order.priceDgo}} грн</p>
-<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs}} грн</p>
+{% if order.priceDgo > 0 %}<p>Расширение ответственности (ДГО) - {{order.priceDgo}} грн</p>{% endif %}
+{% if order.priceNs > 0 %}<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs}} грн</p>{% endif %}
 
 <p><b>Общая сумма Вашего заказа:</b> {{order.price + order.priceDgo + order.priceNs}} грн</p>
 
