Save calculation notification added.

--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
@@ -2,7 +2,7 @@
 
 Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.
 
-Вы оформили заказ полиса ОСАГО на {{siteDomain}}.
+Вы оформили заказ полиса ОСАГО на сайте {{siteDomain}}.
 
 --------------------------
 Номер вашего заказа: {{order.id}}
