--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -438,10 +438,10 @@
 					documentInn: '{{personData.documentInn}}',
                     birthDate: '{{personData.birthDate|date('d.m.Y')}}',
                     phone: '{{personData.phone}}',
-                    region: '{{personData.city.region.id}}',
-                    city: '{{personData.city.id}}',
-                    regionName: '{{personData.city.region}}',
-                    cityName: '{{personData.city}}',
+                    region: '10{#personData.city.region.id#}',
+                    city: '908{#personData.city.id#}',
+                    regionName: 'Киевская область{#personData.city.region#}',
+                    cityName: 'Киев{#personData.city#}',
                     registerAddress: '{{personData.registerAddress}}',
                     registerBuilding: '{{personData.registerBuilding}}',
                 }{% if loop.last != true %},{% endif %}
