--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
@@ -2,7 +2,7 @@
 <p></p>
 <p><b>Серия и номер полиса:</b> {{order.policy.serie}}/{{order.policy.value}}</p>
 <p><b>Начало действия полиса:</b> {{order.activeFrom|date('d.m.Y')}}</p>
-<p><b>Срок страхования:</b> {% if order.insuranceTerm = '0,5' -%}2 недели{% else %}{{order.insuranceTerm}} мес.{%endif%}</p>
+<p><b>Срок страхования:</b> {% if order.insuranceTerm == '0,5' -%}2 недели{% else %}{{order.insuranceTerm}} мес.{%endif%}</p>
 <p><b>ФИО:</b> {{order.surname}} {{order.firstname}} {{order.middlename}}</p>
 <p><b>Адрес проживания:</b> {{order.city}}, {{order.registerAddress}}, {{order.registerBuilding}}</p>
 <p><b>Адрес доставки:</b> {{order.deliveryAddress}}, {{order.deliveryBuilding}}</p>
@@ -24,10 +24,10 @@
 {% if order.priceNs > 0 %}<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs|number_format(2, ',', ' ')}} грн</p>{% endif %}
 <p><b>Общая сумма Вашего заказа:</b> {{(order.price + order.priceDgo + order.priceNs)|number_format(2, ',', ' ')}} грн</p>
 <p>&nbsp;</p>
-<b>Cпособ оплаты:</b> {%- if order.payType = 'cash' -%}Наличными курьеру
-{%- elseif order.payType = 'plastic' -%}Пластиковая карта
-{%- elseif order.payType = 'privat_card' -%}Карта Приват Банка
-{%- elseif order.payType = 'privat24' -%} Приват24
-{%- elseif order.payType = 'terminal' -%}Терминал самообслуживания
-{%- elseif order.payType = 'webmoney' -%}Webmoney
+<b>Cпособ оплаты:</b> {%- if order.payType == 'cash' -%}Наличными курьеру
+{%- elseif order.payType == 'plastic' -%}Пластиковая карта
+{%- elseif order.payType == 'privat_card' -%}Карта Приват Банка
+{%- elseif order.payType == 'privat24' -%} Приват24
+{%- elseif order.payType == 'terminal' -%}Терминал самообслуживания
+{%- elseif order.payType == 'webmoney' -%}Webmoney
 {%- endif -%}
