--- a/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/finish.html.twig
@@ -1,7 +1,7 @@
 {% extends 'InsuranceContentBundle::base.html.twig'%}
 {% block content %}
-<section class="content">
-    <div class="grey_area limit">
+ <section class="content">  
+        <div class="limit text_content">
         {{message|raw}}
     </div>
     <!-- footer-push -->
