Do not clear vin code, active from and car number fields when new insurer yields

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -345,9 +345,9 @@
     function clearData() {
         $('.person .current').text('');
         $('#scrollbar2 li').removeClass('active');
-        $('#activeFrom').val(null);
-        $('#vinCode').val(null);
-        $('#carNumber').val(null);
+        //$('#activeFrom').val(null);
+        //$('#vinCode').val(null);
+        //$('#carNumber').val(null);
         $('#surname').val(null);
         $('#firstname').val(null);
         $('#middlename').val(null);
